--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 		</accessrules>
 	</classpathentry>
 	<classpathentry kind="lib" path="/Client/jars/bin/lwjgl.jar"/>
+	<classpathentry kind="src" path="/RP2Dummy"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
