Converted to Minecraft 1.3.2 and Forge 4.0.0.200
- Merged BrewGuide and QuickGide into CraftGuide
- Converted to the newer FML @Mod loading
- Added ability to set default type visibility,
- Removed backup recipe provider (doesn't support Forge versions before the newer ore dictionary recipes, as those aren't even available for Minecraft 1.3.0+)
- Type visibility pane provides better visual feedback
- Removed RedPower 2 compatibility, until I can test it with a released version of RP2 for Minecraft 1.3.2

--- a/.classpath
+++ b/.classpath
@@ -2,13 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Client">
-		<accessrules>
-			<accessrule kind="nonaccessible" pattern="*CraftGuide*"/>
-		</accessrules>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Client/jars/bin/lwjgl.jar"/>
-	<classpathentry kind="src" path="/RP2Dummy"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Datafile"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Minecraft"/>
+	<classpathentry kind="lib" path="/Minecraft/jars/bin/lwjgl.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
