--- a/.classpath
+++ b/.classpath
@@ -4,10 +4,7 @@
 	<classpathentry kind="src" path="APIs"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Minecraft"/>
-	<classpathentry kind="lib" path="/Minecraft/jars/bin/lwjgl.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/C:/Documents and Settings/Michael/Desktop/lwjgl/2.8.4/lwjgl-docs-2.8.4/javadoc/"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="/Minecraft/jars/libraries/org/lwjgl/lwjgl/lwjgl/2.9.0/lwjgl-2.9.0.jar" sourcepath="/Minecraft/jars/libraries/org/lwjgl/lwjgl/lwjgl/2.9.0/lwjgl-2.9.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Minecraft/jars/libraries/com/google/guava/guava/14.0/guava-14.0.jar" sourcepath="/Minecraft/jars/libraries/com/google/guava/guava/14.0/guava-14.0-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
