--- a/.classpath
+++ b/.classpath
@@ -3,11 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="APIs"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Minecraft"/>
-	<classpathentry kind="lib" path="/Minecraft/jars/bin/lwjgl.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/C:/Documents and Settings/Michael/Desktop/lwjgl/2.8.4/lwjgl-docs-2.8.4/javadoc/"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/Client"/>
+	<classpathentry kind="lib" path="/Client/jars/bin/lwjgl.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
