Switched to ForgeGradle workspace

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ minecraft {
     assetDir = "../run/assets"
 
     replaceIn "CraftGuide_FML.java"
+    replaceIn "LiteMod_CraftGuide.java"
     replace "@MOD_VERSION@", project.version
 }
 
