--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,9 @@ buildscript {
 
 apply plugin: 'forge'
 apply plugin: 'liteloader'
+apply plugin: 'curseforge'
 
-version = "1.6.8.2"
+version = "1.6.8.2-pr2"
 group = "uristqwerty" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "CraftGuide"
 
@@ -106,3 +107,15 @@ task sourcesJar(type: Jar) {
 }
 
 build.dependsOn deobfJar, apiJar, sourcesJar
+
+curse {
+    projectId = '75557'
+    apiKey = project.curseForgeApiKey
+    releaseType = 'alpha'
+
+    addGameVersion '1.7.10'
+    additionalArtifact deobfJar, apiJar, sourcesJar
+    changelog 'Exploring forgegradle uploading to curseforge'
+}
+
+curse.dependsOn build
