--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
 }
 
 apply plugin: 'forge'
-apply plugin: 'liteloader'
+// apply plugin: 'liteloader'
 apply plugin: 'curseforge'
 
 version = "1.6.9.0"
@@ -26,7 +26,7 @@ archivesBaseName = "CraftGuide"
 ext.llrevision = "03"
 
 minecraft {
-    version = "1.7.10-10.13.0.1180"
+    version = "1.8-11.14.3.1449"
     runDir = "run"
 
     replaceIn "CraftGuide_FML.java"
@@ -81,10 +81,10 @@ jar {
     exclude 'litemod.json'
 }
 
-jarLiteloader {
-    exclude '**/CraftGuide_FML.*'
-    exclude 'mcmod.info'
-}
+// jarLiteloader {
+//    exclude '**/CraftGuide_FML.*'
+//    exclude 'mcmod.info'
+//}
 
 task deobfJar(type: Jar) {
     from sourceSets.main.output
