--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,24 @@
+Properties ver = new Properties()
+File versionFile = new File('version.txt')
+
+// build is to distinguish bugfix releases, as the fourth number in the mod version. Resets when any of the others increase.
+ver.build = 0
+
+// revision is used by liteloader, and is required to increase (by an arbitrary amount) with each public release
+ver.revision = 0
+
+ver.load(versionFile.newDataInputStream())
+
 buildscript {
     repositories {
         mavenCentral()
         maven {
-            name = "forge"
-            url = "http://files.minecraftforge.net/maven"
+            name = 'forge'
+            url = 'http://files.minecraftforge.net/maven'
         }
         maven {
-            name = "sonatype"
-            url = "https://oss.sonatype.org/content/repositories/snapshots/"
+            name = 'sonatype'
+            url = 'https://oss.sonatype.org/content/repositories/snapshots/'
         }
     }
     dependencies {
@@ -19,25 +30,25 @@ apply plugin: 'forge'
 apply plugin: 'liteloader'
 apply plugin: 'curseforge'
 
-version = "1.6.9.0"
-group = "uristqwerty" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "CraftGuide"
+version = '1.6.9.' + ver.build
+group = 'uristqwerty' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = 'CraftGuide'
 
-ext.llrevision = "03"
+ext.llrevision = '03'
 
 minecraft {
-    version = "1.7.10-10.13.4.1492-1.7.10"
-    runDir = "run"
+    version = '1.7.10-10.13.4.1492-1.7.10'
+    runDir = 'run'
 
-    replaceIn "CraftGuide_FML.java"
-    replaceIn "LiteMod_CraftGuide.java"
-    replace "@MOD_VERSION@", project.version
+    replaceIn 'CraftGuide_FML.java'
+    replaceIn 'LiteMod_CraftGuide.java'
+    replace '@MOD_VERSION@', project.version
 }
 
 repositories {
     maven {
-        name = "Player's Repo"
-        url = "http://maven.ic2.player.to/"
+        name = 'Player\'s Repo'
+        url = 'http://maven.ic2.player.to/'
     }
 }
 
@@ -55,8 +66,9 @@ task themeZip(type: Zip) {
 processResources
 {
     // this will ensure that this task is redone when the versions change.
-    inputs.property "version", project.version
-    inputs.property "mcversion", project.minecraft.version
+    inputs.property 'version', project.version
+    inputs.property 'mcversion', project.minecraft.version
+    inputs.property 'revision', ver.revision
 
     // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
@@ -64,7 +76,7 @@ processResources
         include 'litemod.json'
                 
         // replace version and mcversion
-        expand 'version':project.version, 'mcversion':project.minecraft.version, 'llrevision':project.llrevision
+        expand 'version':project.version, 'mcversion':project.minecraft.version, 'llrevision':project.llrevision, 'revision':ver.revision
     }
         
     // copy everything else, thats not the mcmod.info
@@ -134,4 +146,10 @@ artifacts {
     archives deobfJar
     archives apiJar
     archives sourcesJar
+}
+
+build.doLast {
+    ver.build++
+    ver.revision++
+    ver.store(versionFile.newWriter(), null)
 }
