More exception logging; worker thread; grass drop probabilities
Note: these are old changes that weren't fully commited at the time, so
while I'm trying to break them up logically, it's possible that it won't
build exactly as-is.

--- a/build.gradle
+++ b/build.gradle
@@ -149,7 +149,7 @@ artifacts {
 }
 
 build.doLast {
-    ver.build++
-    ver.revision++
+    ver.build = "" + ((ver.build as int) + 1)
+    ver.revision = "" + ((ver.revision as int) + 1)
     ver.store(versionFile.newWriter(), null)
 }
