--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ ver.build = 0
 // revision is used by liteloader, and is required to increase (by an arbitrary amount) with each public release
 ver.revision = 0
 
+// with the default values set above, now try reading the actual values
 ver.load(versionFile.newDataInputStream())
 
 buildscript {
@@ -30,6 +31,7 @@ apply plugin: 'forge'
 apply plugin: 'liteloader'
 apply plugin: 'curseforge'
 
+String minecraft_versions = '1.7.10'
 version = '1.7.0.' + ver.build
 group = 'uristqwerty' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'CraftGuide'
@@ -74,11 +76,11 @@ processResources
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
         include 'litemod.json'
-                
+
         // replace version and mcversion
         expand 'version':project.version, 'mcversion':project.minecraft.version, 'llrevision':project.llrevision, 'revision':ver.revision
     }
-        
+
     // copy everything else, thats not the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
@@ -118,12 +120,16 @@ task sourcesJar(type: Jar) {
     classifier = 'sources'
 }
 
+task publish(type: Exec) {
+    commandLine 'cmd', '/c', 'publish.bat', project.version, minecraft_versions
+}
+
 curse {
     projectId = '75557'
     apiKey = project.curseForgeApiKey
     releaseType = 'alpha' //alpha|beta|release
 
-    addGameVersion '1.7.10'
+    addGameVersion minecraft_versions
     additionalArtifact deobfJar, apiJar, sourcesJar
 
     changelog '''\
@@ -141,7 +147,8 @@ Other changes:
 
 }
 
-curse.dependsOn build
+publish.dependsOn build
+curse.dependsOn publish
 
 artifacts {
     archives deobfJar
