Removed Liteloader, fixed IC², misc. warning corrections
Some part of IC² recipe support was still using Reflection (probably for API
version compatibility), so it wasn't an immediate error. Fixed after the
incompatibility showed in testing.

It seems forgegradle can't build liteloader and forge in the same project
anymore (or the way to do so was very obscure), so for now I'm just dropping
the code entirely. I tried making it a subproject, but excluding all the
rest of the mod that references forge would have been a lot of work.
Especially since recent API changes directly reference FluidStacks, so I'd
either need an annotation to omit specific functions when building
liteloader (Rust's #[cfg(feature="forge")] would be great, there), or leave
the liteloader version with a far less convenient API. Just picking out the
rest of forge-reliant code would be enough work, plus finding the specific
character sequence to make gradle do what I want, that it's easier to put
it off for now.

--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,6 @@ File versionFile = new File('version.txt')
 // build is to distinguish bugfix releases, as the fourth number in the mod version. Resets when any of the others increase.
 ver.build = 0
 
-// revision is used by liteloader, and is required to increase (by an arbitrary amount) with each public release
-ver.revision = 0
-
 // with the default values set above, now try reading the actual values
 ver.load(versionFile.newDataInputStream())
 
@@ -44,31 +41,6 @@ version = '1.7.1.mc18-pre-' + ver.build
 group = 'uristqwerty'
 archivesBaseName = 'CraftGuide'
 
-ext.llrevision = '03'
-project(':litemod') {
-    apply plugin: 'net.minecraftforge.gradle.liteloader'
-    version = '1.7.1.mc18-pre-' + ver.build
-    group = 'uristqwerty'
-    archivesBaseName = 'CraftGuide'
-    minecraft {
-        version = '1.8.9'
-        runDir = 'run'
-        mappings = 'stable_22'
-    }
-
-    jar {
-        exclude '**/CraftGuide_FML.*'
-        exclude 'mcmod.info'
-    }
-}
-sourceSets {
-    main {
-        java {
-            exclude '**/LiteMod_CraftGuide.*'
-        }
-    }
-}
-
 minecraft {
     version = '1.8.9-11.15.1.2318-1.8.9'
     runDir = 'run'
@@ -76,7 +48,6 @@ minecraft {
 
     replace '@MOD_VERSION@', project.version
     replaceIn 'CraftGuide_FML.java'
-    replaceIn 'LiteMod_CraftGuide.java'
 }
 
 repositories {
@@ -106,29 +77,24 @@ processResources
     // this will ensure that this task is redone when the versions change.
     inputs.property 'version', project.version
     inputs.property 'mcversion', project.minecraft.version
-    inputs.property 'revision', ver.revision
 
     // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
-        include 'litemod.json'
 
         // replace version and mcversion
-        expand 'version':project.version, 'mcversion':project.minecraft.version, 'llrevision':project.llrevision, 'revision':ver.revision
+        expand 'version':project.version, 'mcversion':project.minecraft.version
     }
 
     // copy everything else, thats not the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
-        exclude 'litemod.json'
     }
 }
 
 processResources.dependsOn themeZip
 
 jar {
-    exclude '**/LiteMod_CraftGuide.*'
-    exclude 'litemod.json'
     classifier = 'forge'
 }
 
@@ -160,7 +126,7 @@ curseforge {
     apiKey = project.curseForgeApiKey
     project {
         id = '75557'
-        releaseType = 'alpha' //alpha|beta|release
+        releaseType = 'beta' //alpha|beta|release
         changelog = file('changes.txt')
 
         addGameVersion minecraft_versions
@@ -182,7 +148,6 @@ artifacts {
 
 build.doLast {
     ver.build = '' + ((ver.build as int) + 1)
-    ver.revision = '' + ((ver.revision as int) + 1)
     ver.store(versionFile.newWriter(), null)
 }
 
