GT:NH-driven enhancements
 - Fixed build.gradle using http mavenCentral instead of https
 - CraftTypeDisplay shows item name tooltip
 - CraftTypeDisplay shows recipe counts
 - made RecipeCache.setFilter an asynchronous task rather than freezing UI

--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,9 @@ ver.load(versionFile.newDataInputStream())
 
 buildscript {
     repositories {
-        mavenCentral()
+        maven {
+            url = 'https://repo.maven.apache.org/maven2/'
+        }
         maven {
             name = 'forge'
             url = 'http://files.minecraftforge.net/maven'
